--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
-	<title>Pathway - Cost</title>
+	<title>Pathway - home</title>
 	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png" />
 	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png" />
@@ -29,7 +29,7 @@
 	<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this page -->
-	<link href="/styles/what_is_pathway.css" rel="stylesheet">
+	<link href="/styles/home.css" rel="stylesheet">
 </head>
 
 <body>
@@ -72,7 +72,7 @@
     <nav id="siteNavigation" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="nav-1 "><a href="/pages/testimonials/testimonials.html">Testimonials</a></li>
-        <li class="nav-2 nav_active"><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-2 "><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
         <li class="nav-3 "><a href="#join">Join Pathway</a></li>
         <li class="nav-4 "><a href="/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
         <li class="nav-5 "><a href="/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
@@ -83,103 +83,97 @@
 <!-- Header End --> 
 
 
-<!-- Breadcrumb start -->
-<div class="breadCrumbHolder module hidden-xs">
-    <div class="container">
-        <div id="breadCrumb" class="breadCrumb module">
-            <ul>
-                <li class="first"><a href="/">Home</a></li>
-                <li><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
-                <li class="pipe-divider">l Version</li>
-                
-                <li class="last lowercase">Cost</li>
-                
-            </ul>
+
+<!-- Hero Banner/Carousel Start -->
+<div class="container main_carousel">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="8000"> 
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"> </li>
+      <li data-target="#myCarousel" data-slide-to="1"> </li>
+      <li data-target="#myCarousel" data-slide-to="2"> </li>
+      <li data-target="#myCarousel" data-slide-to="3"> </li>
+      <li data-target="#myCarousel" data-slide-to="4"> </li>
+      <li data-target="#myCarousel" data-slide-to="5"> </li>
+      <li data-target="#myCarousel" data-slide-to="6"> </li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="item active">
+       <a class="full-width-banner teal" href="http://www.byui.edu/pathway/speaking-partner-promo">
+         <img class="visible-md visible-lg" src="img/homepage/MCspeakingPartners_2014_banner_pathway.lds.org.png" alt="Apply Now">
+         <img class="visible-sm visible-xs" src="img/homepage/MCspeakingPartners_2014_tablet_banner_pathway.lds.org.png" alt="Apply Now">
+       </a>
+     </div>
+     <div class="item">  <a href="pages/what_is_pathway/what_is_pathway.html"><img src="img/homepage/whatispathway.jpg" alt="What is Pathway"></a>
+      <div class="container">
+        <div class="carousel-caption red">
+          <h1><a href="pages/what_is_pathway/what_is_pathway.html">What is Pathway?</a></h1>
+          <a href="pages/what_is_pathway/what_is_pathway.html">A low-cost educational opportunity that combines online courses with local gatherings.</a>
         </div>
+      </div>
     </div>
+    <div class="item"> <a href="pages/what_is_pathway/what_is_pathway.html"><img src="img/homepage/opportunity_postits.png" alt="Opportunity"></a>
+      <div class="container">
+        <div class="carousel-caption orange">
+          <h1><a href="pages/what_is_pathway/what_is_pathway.html">Open the Door to Opportunity</a></h1>
+          <a href="pages/what_is_pathway/what_is_pathway.html">A unique blend of life skills, academic basics, and gospel learning creates a foundation for growth.</a>
+        </div>
+      </div>
+    </div>
+    <div class="item"><a href="pages/what_is_pathway/l_version/HPW.html"><img src="img/homepage/meet-a-student.jpg" alt="English Language Learners"></a>
+      <div class="container">
+        <div class="carousel-caption turquoise">
+          <h1><a href="pages/testimonials/testimonials.html">Meet a Pathway Student</a></h1>
+          <a href="pages/testimonials/testimonials.html">Our students have diverse backgrounds and native languages, but one thing they share is a desire for education.</a>
+        </div>
+      </div>
+    </div>
+    <div class="item"><a href="pages/testimonials/testimonials.html"><img src="img/homepage/speaking_partners.jpg" alt="Speaking Partners"></a>
+      <div class="container">
+        <div class="carousel-caption teal">
+          <h1><a href="pages/what_is_pathway/l_version/HPW.html">English Language Learners</a></h1>
+          <a href="pages/what_is_pathway/l_version/HPW.html">The L version is available to help students become fully proficient in English.</a>
+        </div>
+      </div>
+    </div>
+    <div class="item"><a href="pages/advising-and-support.html"><img src="img/homepage/need_help.png" alt="Help"></a>
+      <div class="container">
+        <div class="carousel-caption green">
+          <h1><a href="pages/advising-and-support.html">Need Help?</a></h1>
+          <a href="pages/advising-and-support.html">Pathway Support is ready to guide you through your educational journey.</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a> <a class="right carousel-control" href="#myCarousel" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a> </div>
 </div>
-<!-- Breadcrumb end -->
+<!-- Hero Carousel End -->
 
-
-<!-- Start to the content area -->
-<div id="main-container" class="container">
-	<div class="row row-offcanvas row-offcanvas-right">
-		<div class="col-xs-12 col-sm-8 main-content">
-			<button type="button" onClick="open_side();" class="navbar-toggle sidebar-btn collapsed">
-				<img id="arrow-icon" src="../../../img/arrow.png" width="14" height="14" alt="arrow">
-			</button>
-			<div class="hero pf-page-header">
-				<img src="../../../img/wip/icons/lversion.png" alt="standardLogo">
-				<h1 id="Standard" class="page-title">L Version</h1>
-				<p class="page-summary">For students who have intermediate-low English proficiency <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_cShGDUV2VTJZgb3"><img style="margin: 10px 0 0 0; position: relative;" src="../../../img/EnglishTestButton.png"></a></p>
-			</div>
-			<div class="pf-section">
-				<div class="pf-page-header">
-					<img src="../../../img/wip/icons/piggy.png" alt="piggy">
-					<h2 id="Cost" class="subheading">Cost</h2>
-				</div>
-				<div class="main-content">
-					<p>Pathway’s low tuition rate brings a college education within financial reach of many who thought they could not afford college.</p>
-					<br>
-					<a href="cost_calc_tuition.html"><img src="../../../img/cost/button_tuition_blue.png" alt="Click here to calculate tuition" class="img-responsive" width="100%"></a>
-					<br>
-					<br>
-					<img class="img-responsive" src="../../../img/cost/semester_college_cost.png" alt="Cost Chart" width="100%">
-					<br>			
-					<br>
-					<br>
-					<p>Pathway students who pursue a degree through BYU-Idaho's Online Degree Program after Pathway continue to pay their local Pathway tuition rate. Pathway tuition may increase annually.</p>
-					<p>Pathway students who choose to continue their education on campus after Pathway will pay regular on-campus tuition.</p>
-					<h3 id="FinancialAid" class="p-heading turquoise">Financial Aid</h3>
-					<p>Financial aid is not available for Pathway students. However, U.S. students who have a high school diploma or GED may apply for federal financial aid after they complete Pathway and if they are accepted into a degree-seeking program.</p>
-				</div>
-			</div>
-			<a href="admission.html" class="previous turquoise"><< Admission Requirements</a>
-			<a href="cost_calc_tuition.html" class="next turquoise">Calculate Tuition >></a>
-		</div>
-		<!-- Sidebar Start -->
-<div class="col-xs-6 col-sm-4 pull-right" id="sidebar" role="navigation">
-	<div class="pf-sidebar" id="sideNav" role="complementary">
-		<div class="sidebar-caret   pos2  "></div>
-		<h3><a  href="../s_version/HPW.html"><img src="../../../img/wip/icons/standard.png" alt="Standard Logo" width="51" height="52"> Standard</a></h3>
-		
-		<h3><a class="active" href="../l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
-		
-		<ul class="nav turquoise pf-sidenav">
-			<li  ><a href="HPW.html"><span class="caret down"></span>How Pathway Works</a>
-				<ul class="nav drop-down">
-					<li><a href="#OnlineAcademicCourses">Online Academic Courses</a></li>
-					<li><a href="#ReligionClasses">Religion Courses</a></li>
-					<li><a href="#WeeklyGathering">Weekly Gathering</a></li>
-				</ul>
-			</li>
-			<li  ><a href="speaking_partners.html"><span class="caret"></span>Speaking Partners</a></li>
-			<li  ><a href="service_missionaries.html"><span class="caret"></span>Service Missionaries</a></li>
-			<li  ><a href="admission.html"><span class="caret"></span>Admission Requirements</a></li>
-			<li class="active" ><a href="cost.html"><span class="caret down"></span>Cost</a>
-				<ul class="nav">
-					<li><a href="cost_calc_tuition.html">Calculate Tuition</a></li>
-					<li><a href="cost.html#FinancialAid">Financial Aid</a></li>
-				</ul>
-			</li>
-			<li  ><a href="degree.html"><span class="caret down"></span>Degree Options</a>
-				<ul class="nav">
-					<li><a href="#OnlineDegree">Online Degree Program</a></li>
-					<li><a href="#Campus">Campus</a></li>
-					<li><a href="#OtherUniversities">Other Universities</a></li>
-				</ul>
-			</li>
-			<li  ><a href="course_descriptions.html"><span class="caret down"></span>Course Descriptions</a></li>
-		</ul>
-		
-		<h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
-		<br>
-		<a href="https://pathway.lds.org/Finder/World"><img style="max-width:248px;" class="hidden-sm img-responsive" src="../../../img/admission/ApplyButton_Lversion.png"><img style="max-width:175px;" class="visible-sm img-responsive" src="../../../img/admission/ApplyButton_Lversion.png"></a>
-		
-	</div>
-</div>
-<!-- End Sidebar -->
-	</div>
+<div class="container"> 
+  <div class="row">
+    <div class="feature col-sm-4 col-xs-6"> 
+      <a href="pages/what_is_pathway/what_is_pathway.html"><img src="img/homepage/localgatherings.png" class="img-responsive"></a>
+      <div class="featureMaster feature1 first-columns"><a href="pages/what_is_pathway/what_is_pathway.html">Online Courses with local gatherings</a></div>
+    </div>
+    <div class="feature col-sm-4 col-xs-6"> 
+      <a href="#apply"><img src="img/homepage/applyhere.png" class="img-responsive"></a>
+      <div class="featureMaster feature2 second-columns"><a href="#apply">Find a Location and&nbsp;Apply</a></div>
+    </div>
+    <div class="feature col-sm-4 col-xs-6"> 
+      <a href="pages/advising-and-support.html"><img src="img/homepage/pathwayadvising.png" class="img-responsive"></a>
+      <div class="featureMaster feature3 third-columns"><a href="pages/advising-and-support.html">friendly support team</a></div>
+    </div>
+    <div class="feature visible-xs col-xs-6">
+      <ul class="nav navbar-nav footer-box">
+        <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
+        <li> <a href="pages/about-us.html">About Us</a> </li>
+        <li> <a href="pages/pathway-faq.html">FAQ</a> </li>
+        <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
+        <li> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
+        <li> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
+      </ul></div>
+    </div>
+  </div>
 </div>
 
 <footer>
