--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -1,63 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
-<title>Pathway - About Us</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
+	<title>Pathway - about_us</title>
+	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png" />
+	<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon-152x152.png" />
+	<link rel="icon" type="image/png" href="favicon/favicon-196x196.png" sizes="196x196" />
+	<link rel="icon" type="image/png" href="favicon/favicon-160x160.png" sizes="160x160" />
+	<link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16" />
+	<meta name="msapplication-TileColor" content="#f3a91e" />
+	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
 
-<!-- Favicon Section -->
-<link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="114x114" href="../favicon/apple-touch-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="144x144" href="../favicon/apple-touch-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="120x120" href="../favicon/apple-touch-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="76x76" href="../favicon/apple-touch-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="152x152" href="../favicon/apple-touch-icon-152x152.png">
-<link rel="icon" type="image/png" href="../favicon/favicon-196x196.png" sizes="196x196">
-<link rel="icon" type="image/png" href="../favicon/favicon-160x160.png" sizes="160x160">
-<link rel="icon" type="image/png" href="../favicon/favicon-96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="../favicon/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="../favicon/favicon-16x16.png" sizes="16x16">
-<meta name="msapplication-TileColor" content="#f3a91e">
-<meta name="msapplication-TileImage" content="../favicon/mstile-144x144.png">
-<!-- Bootstrap core CSS -->
-<link href="../dist/css/bootstrap.min.css" rel="stylesheet">
+	<!-- Bootstrap core CSS -->
+	<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Custom styles for this template -->
-<link href="../styles/about_us.css" rel="stylesheet">
-
-<!-- Just for debugging purposes. Don't actually copy this line! -->
-<!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-      <![endif]-->
+	<!-- Custom styles for this page -->
+	<link href="/styles/about_us.css" rel="stylesheet">
 </head>
+
 <body>
-<!-- START First Top Header -->
-<div class="navbar navbar-inverse signIn pathway-header" role="signIn">
+<!-- Header Start -->
+ <div class="navbar navbar-inverse signIn pathway-header" role="signIn">
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="../index.htm"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="../index.htm"></a> </li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="../pages/advising-and-support.html">Contact Us <img src="../img/speechbubble.png" 
-
-						width="13" height="11" alt="speech"></a>
-        <form class="navbar-right pull-right">
-          <button type="submit" class="btn signin-btn"> SIGN IN </button>
-        </form>
-      </li>
-    </ul>
-  </div>
+      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="pages/advising-and-support.html">Contact Us <img src="/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+       <form class="navbar-right pull-right ng-pristine ng-valid">
+        <!-- Sign-in / User button -->
+        <div class="btn-group">
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/Home/ReturnHome"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
+            <span class="caret"></span>
+            <span class="sr-only">Dropdown</span>
+          </button>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Student ID: 123456789
+            </a></li>
+            <li class="divider"></li>
+            <li><a href="/Home/PersonalInfo">Update Personal Info</a></li>
+            <li><a href="/Application/Index/66">Reapply</a></li>
+            <li class="divider"></li>
+            <li><a style="text-decoration: none;" href="/Account/LogOff">Logout</a></li>
+          </ul>
+        </div>
+      </form>
+    </li>
+  </ul>
 </div>
-<!-- END Top Header Start --> 
-<!-- START Navbar -->
+</div>
+<!-- Navbar Start -->
 <div class="navbar navbar-inverse site-navigation" role="navigation">
   <div id="main_nav" class="container">
     <div class="navbar-header">
@@ -65,28 +71,33 @@
     </div>
     <nav id="siteNavigation" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="nav-1"><a href="testimonials/testimonials.html">Testimonials</a></li>
-        <li class="nav-2"><a href="what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
-        <li class="nav-3"><a href="#join">Join Pathway</a></li>
-        <li class="nav-4"><a href="speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
-        <li class="nav-5"><a href="local_leaders/using-pathway.html">Local Leaders</a></li>
+        <li class="nav-1 "><a href="/pages/testimonials/testimonials.html">Testimonials</a></li>
+        <li class="nav-2 "><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-3 "><a href="#join">Join Pathway</a></li>
+        <li class="nav-4 "><a href="/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
+        <li class="nav-5 "><a href="/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
     </nav>
   </div>
 </div>
-<!-- END Navbar --> 
+<!-- Header End --> 
+
+
 <!-- Breadcrumb start -->
 <div class="breadCrumbHolder module hidden-xs">
-  <div class="container">
-    <div id="breadCrumb" class="breadCrumb module">
-      <ul>
-        <li class="first"><a href="../index.htm">Home</a></li>
-        <li class="last">About Us</li>
-      </ul>
+    <div class="container">
+        <div id="breadCrumb" class="breadCrumb module">
+            <ul>
+                <li class="first"><a href="../index.htm">Home</a></li>
+                <li  class="last" >about us</li>
+                
+                <li class="last"></li> 
+            </ul>
+        </div>
     </div>
-  </div>
 </div>
-<!-- Breadcrumb end --> 
+<!-- Breadcrumb end -->
+
 
 <!-- Start to the content area -->
 
@@ -226,20 +237,21 @@
   </div>
 </div>
 </div>
+
 <footer>
   <div class="container">
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="../img/social-icons/facebook.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="../img/social-icons/pinterest.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/img/social-icons/facebook.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/img/social-icons/pinterest.png" width="27" height="27"></a>
           <br class="hidden-xs"> 
-          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="../img/social-icons/twitter.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="../img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/img/social-icons/twitter.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li class="footer-link hidden-xs"> <a href="about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="pathway-faq.html"><img class="faq-bubble" src="../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/pages/about-us.html">About Us</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/pages/pathway-faq.html"><img class="faq-bubble" src="/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
@@ -248,12 +260,15 @@
   </div>
 </footer>
 
-<!-- /container --> 
+<!-- Jquery and Bootstrap JS -->
+<script src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
+<script src="/dist/js/bootstrap.min.js"></script>
 
-<!-- Bootstrap core JavaScript
-	================================================== --> 
-<!-- Placed at the end of the document so the pages load faster --> 
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script> 
-<script src="../dist/js/bootstrap.min.js"></script> 
+
+<script src="/js/drawer.js"></script> 
+
+
+
+
 </body>
 </html>
