--- a/pages/speaking_partners/contact-us.html
+++ b/pages/speaking_partners/contact-us.html
@@ -1,163 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Pathway - Speaking Partners</title>
-
-	<!-- Favicon Section -->
-	<link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-touch-icon-57x57.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="../../favicon/apple-touch-icon-114x114.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="../../favicon/apple-touch-icon-72x72.png" />
-	<link rel="apple-touch-icon" sizes="144x144" href="../../favicon/apple-touch-icon-144x144.png" />
-	<link rel="apple-touch-icon" sizes="60x60" href="../../favicon/apple-touch-icon-60x60.png" />
-	<link rel="apple-touch-icon" sizes="120x120" href="../../favicon/apple-touch-icon-120x120.png" />
-	<link rel="apple-touch-icon" sizes="76x76" href="../../favicon/apple-touch-icon-76x76.png" />
-	<link rel="apple-touch-icon" sizes="152x152" href="../../favicon/apple-touch-icon-152x152.png" />
-	<link rel="icon" type="image/png" href="../../favicon/favicon-196x196.png" sizes="196x196" />
-	<link rel="icon" type="image/png" href="../../favicon/favicon-160x160.png" sizes="160x160" />
-	<link rel="icon" type="image/png" href="../../favicon/favicon-96x96.png" sizes="96x96" />
-	<link rel="icon" type="image/png" href="../../favicon/favicon-32x32.png" sizes="32x32" />
-	<link rel="icon" type="image/png" href="../../favicon/favicon-16x16.png" sizes="16x16" />
+	<link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
+	<title>Pathway - Contact Us</title>
+	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png" />
+	<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon-152x152.png" />
+	<link rel="icon" type="image/png" href="favicon/favicon-196x196.png" sizes="196x196" />
+	<link rel="icon" type="image/png" href="favicon/favicon-160x160.png" sizes="160x160" />
+	<link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16" />
 	<meta name="msapplication-TileColor" content="#f3a91e" />
-	<meta name="msapplication-TileImage" content="../../../favicon/mstile-144x144.png" />
+	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
+
 	<!-- Bootstrap core CSS -->
-	<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
 
-	<!-- Custom styles for this template -->
-	<link href="../../styles/local_leaders.css" rel="stylesheet">
+	<!-- Custom styles for this page -->
+	<link href="/styles/speaking_partners.css" rel="stylesheet">
+</head>
 
-	<!-- Just for debugging purposes. Don't actually copy this line! -->
-	<!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-      <![endif]-->
-   </head>
-
-   
-
-   <body>
-   	         <!-- START First Top Header -->
-<div class="navbar navbar-inverse signIn pathway-header" role="signIn">
+<body>
+<!-- Header Start -->
+ <div class="navbar navbar-inverse signIn pathway-header" role="signIn">
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left">
-        <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="../../index.htm"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="../../index.htm"></a>
-        </li>
-        <li class="header-column pull-right">
-          <a class="header_contact hidden-xs pull-left" href="../advising-and-support.html">Contact Us <img src="../../img/speechbubble.png" 
-
-            width="13" height="11" alt="speech"></a>
-            <form class="navbar-right pull-right">
-              <button type="submit" class="btn signin-btn">
-                SIGN IN
-              </button>
-            </form>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <!-- END Top Header Start -->
-    <!-- START Navbar -->
-    <div class="navbar navbar-inverse site-navigation" role="navigation">
-      <div id="main_nav" class="container">
-        <div class="navbar-header">
-          <button type="button" class="main_toggle navbar-toggle" data-toggle="collapse" data-target="#siteNavigation">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="pages/advising-and-support.html">Contact Us <img src="/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+       <form class="navbar-right pull-right ng-pristine ng-valid">
+        <!-- Sign-in / User button -->
+        <div class="btn-group">
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/Home/ReturnHome"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
+            <span class="caret"></span>
+            <span class="sr-only">Dropdown</span>
           </button>
-        </div>
-        <nav id="siteNavigation" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="nav-1"><a href="../testimonials/testimonials.html">Testimonials</a></li>
-            <li class="nav-2"><a href="../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
-            <li class="nav-3"><a href="#join">Join Pathway</a></li>
-            <li class="nav-4 nav_active"><a href="what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
-            <li class="nav-5"><a href="../local_leaders/using-pathway.html">Local Leaders</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div> 
-    <!-- END Navbar --> 
-    <!-- Breadcrumb start -->
-    <div class="breadCrumbHolder module hidden-xs">
-      <div class="container">
-        <div id="breadCrumb" class="breadCrumb module">
-          <ul>
-            <li class="first"><a href="../../index.htm">Home</a></li>
-            <li><a href="what-is-speaking-partners.html">Speaking Partners</a></li>
-            <li class="last">Contact Us</li>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Student ID: 123456789
+            </a></li>
+            <li class="divider"></li>
+            <li><a href="/Home/PersonalInfo">Update Personal Info</a></li>
+            <li><a href="/Application/Index/66">Reapply</a></li>
+            <li class="divider"></li>
+            <li><a style="text-decoration: none;" href="/Account/LogOff">Logout</a></li>
           </ul>
         </div>
-      </div>
+      </form>
+    </li>
+  </ul>
+</div>
+</div>
+<!-- Navbar Start -->
+<div class="navbar navbar-inverse site-navigation" role="navigation">
+  <div id="main_nav" class="container">
+    <div class="navbar-header">
+      <button type="button" class="main_toggle navbar-toggle" data-toggle="collapse" data-target="#siteNavigation"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
     </div>
+    <nav id="siteNavigation" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li class="nav-1 "><a href="/pages/testimonials/testimonials.html">Testimonials</a></li>
+        <li class="nav-2 "><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-3 "><a href="#join">Join Pathway</a></li>
+        <li class="nav-4 nav_active"><a href="/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
+        <li class="nav-5 "><a href="/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
+<!-- Header End --> 
+
+
+<!-- Breadcrumb start -->
+<div class="breadCrumbHolder module hidden-xs">
+    <div class="container">
+        <div id="breadCrumb" class="breadCrumb module">
+            <ul>
+                <li class="first"><a href="../index.htm">Home</a></li>
+                <li >Speaking Partners</li>
+                
+                <li class="last">Contact Us</li> 
+            </ul>
+        </div>
+    </div>
+</div>
 <!-- Breadcrumb end -->
 
-   	<!-- Start to the content area -->
 
+<!-- Start to the content area -->
 <div id="main-container" class="container">
-   		<div class="row row-offcanvas row-offcanvas-right">
-   			<div class="col-xs-12 col-sm-8 main-content">
-            <button type="button" onClick="open_side();" class="navbar-toggle sidebar-btn collapsed">
-            <img id="arrow-icon" src="../../img/arrow.png" width="14" height="14" alt="arrow">
+ <div class="row row-offcanvas row-offcanvas-right">
+  <div class="col-xs-12 col-sm-8 main-content">
+    <button type="button" onClick="open_side();" class="navbar-toggle sidebar-btn collapsed">
+      <img id="arrow-icon" src="../../img/arrow.png" width="14" height="14" alt="arrow">
 
-</button>
-   				<br>
-        <div class="hero pf-page-header">
-        <img alt="speaking partners icon" src="../../img/speaking-partners-main/website_speakingpartners_image5.png" />
-        <h2 class="subheading green">Speaking Partners</h2>
-        <h1 id="Standard" class="green page-title">Contact Us</h1>
-        </div>
-        <br>
-   			<div class="pf-section">
-   				<p>If you have questions or concerns about your involvement with the Speaking Partner Program please contact the <a target="_blank" href="https://pathway.lds.org/Main/AdvisingAndSupport">Pathway Support Center</a>.</p>
-   			</div>
-   			</div>
-
-<!-- Sidebar Start -->
-        <div class="col-xs-6 col-sm-4 sidebar-offcanvas pull-right" id="sidebar" role="navigation">
-      <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
-        <ul class="nav darkgreen pf-sidenav">
-          <li> <a href="what-is-speaking-partners.html"> <span class="caret"></span> Speaking Partners</a> </li>
-          <li> <a href="signup.html"> <span class="caret"></span> Sign Up / Find&nbsp;A&nbsp;Partner</a> </li>
-          <li> <a href="discussion-materials.html"> <span class="caret"></span> Discussion Materials</a>
-          </li>
-          <li> <a href="guidelines.html"> <span class="caret"></span> Guidelines for Mentors</a>
-          </li>
-          <li class="active"> <a href="contact-us.html"> <span class="caret"></span> Contact Us</a>
-          </li>
-          <li> <a href="../pathway-faq.html#sp-section"> <span class="caret"></span> FAQ</a>
-          </li>
-        </ul>
-      </div>
+    </button>
+    <br>
+    <div class="hero pf-page-header">
+      <img alt="speaking partners icon" src="../../img/speaking-partners-main/website_speakingpartners_image5.png" />
+      <h2 class="subheading green">Speaking Partners</h2>
+      <h1 id="Standard" class="green page-title">Contact Us</h1>
     </div>
-        <!-- End Sidebar -->
-      </div>
-      </div>
+    <br>
+    <div class="pf-section">
+     <p>If you have questions or concerns about your involvement with the Speaking Partner Program, please feel free to <a href="https://pathway.lds.org/Main/AdvisingAndSupport">contact us</a>. We also invite Pathway missionaries and students participating in the Speaking Partner Program to contact the <a href="https://pathway.lds.org/Main/AdvisingAndSupport">Pathway Support Center</a>.</p>
    </div>
+   </div>
+ <!-- Sidebar Start -->
+<div class="col-xs-6 col-sm-4 sidebar-offcanvas pull-right" id="sidebar" role="navigation">
+  <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
+    <ul class="nav darkgreen pf-sidenav">
+      <li > <a href="what-is-speaking-partners.html"> <span class="caret"></span> Speaking Partners</a> </li>
+      <li > <a href="signup.html"> <span class="caret"></span> Sign Up / Find&nbsp;A&nbsp;Partner</a> </li>
+      <li > <a href="discussion-materials.html"> <span class="caret"></span> Discussion Materials</a>
+      </li>
+      <li > <a href="guidelines.html"> <span class="caret"></span> Guidelines for Mentors</a>
+      </li>
+      <li  class="active" > <a href="contact-us.html"> <span class="caret"></span> Contact Us</a>
+      </li>
+      <li> <a href="../pathway-faq.html#sp-section"> <span class="caret"></span> FAQ</a>
+      </li>
+    </ul>
+  </div>
+</div>
+<!-- End Sidebar -->
+</div>
+</div>
+
 <footer>
   <div class="container">
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="../../img/social-icons/facebook.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="../../img/social-icons/pinterest.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/img/social-icons/facebook.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/img/social-icons/pinterest.png" width="27" height="27"></a>
           <br class="hidden-xs"> 
-          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="../../img/social-icons/twitter.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="../../img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/img/social-icons/twitter.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li class="footer-link hidden-xs"> <a href="../about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="../pathway-faq.html"><img class="faq-bubble" src="../../img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/pages/about-us.html">About Us</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/pages/pathway-faq.html"><img class="faq-bubble" src="/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
@@ -166,13 +161,15 @@
   </div>
 </footer>
 
-<!-- /container --> 
+<!-- Jquery and Bootstrap JS -->
+<script src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
+<script src="/dist/js/bootstrap.min.js"></script>
 
-<!-- Bootstrap core JavaScript
-	================================================== --> 
-	<!-- Placed at the end of the document so the pages load faster --> 
-	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script> 
-	<script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../js/drawer.js"></script>
+
+<script src="/js/drawer.js"></script> 
+
+
+
+
 </body>
 </html>
